--- a/index.html
+++ b/index.html
@@ -233,21 +233,106 @@
               se mecían las oropéndolas bulliciosas en sus nidos colgantes, y en
               medio de tan grata algarabía, oíase a las veces el grito agudo del
               pajarero, que desde su barbacoa y armado de honda, espantaba las
-              guacamayas hambrientas que revoloteaban sobre el maizal.” 
-              <p>Fuente:
-              Fondo Archivo del Patrimonio Fotográfico y Fílmico del Valle del
-              Cauca. (En línea) (Consultado en marzo de 2021) Disponible en:
-              http://hdl.handle.net/123456789/25046</p>
+              guacamayas hambrientas que revoloteaban sobre el maizal.”
+
+              <iframe
+                width="100%"
+                height="300"
+                scrolling="no"
+                frameborder="no"
+                allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009557709&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+              ></iframe>
             </p>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009557709&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/miguel-angel-alfonso-romero-218207909" title="Miguel Angel Alfonso" target="_blank" style="color: #cccccc; text-decoration: none;">Miguel Angel Alfonso</a> · <a href="https://soundcloud.com/miguel-angel-alfonso-romero-218207909/maria" title="María" target="_blank" style="color: #cccccc; text-decoration: none;">María</a></div>
+
+            <div
+              style="
+                font-size: 10px;
+                color: #cccccc;
+                line-break: anywhere;
+                word-break: normal;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                  Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+                font-weight: 100;
+              "
+            >
+              <a
+                href="https://soundcloud.com/miguel-angel-alfonso-romero-218207909"
+                title="Miguel Angel Alfonso"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >Miguel Angel Alfonso</a
+              >
+              ·
+              <a
+                href="https://soundcloud.com/miguel-angel-alfonso-romero-218207909/maria"
+                title="María"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >María</a
+              >
+            </div>
           </div>
           <!-- Archery -->
           <div class="grid-column span-half pt3 pb3 mobile-m order-8">
             <h3>Geografía Tropical</h3>
             <p>
-              Colombia, Bosquejo de su Geografía Tropical; escrita por Ernesto Guhl es el relato de como el geógrafo alemán viajo por todo el país buscando enseñarnos como varios factores como el político o el económico han afectado la geografía del país. En una sección del libro titulada “Un colonizador colombiano” nos cuenta sobre Tiberio, que tras varios años en la ciudad se decidió a mudarse junto a su familia y empezar de cero en medio de la nada. Llegó a colonizar varias hectáreas de campo y a tener un montón de animales como vacas y gallinas. La violencia entre partidos lo obligo a vender y dejarlo todo. Unos años después pudo volver a trabajar en el campo, aunque ya sin ser el dueño. El objetivo de eta historia es mostrar como un hombre que no tiene nada puede llegar a un lugar donde a simple vista no hay nada y base de arduo trabajo pudo ganarse la vida y aprovechar la tierra al máximo.
+              Colombia, Bosquejo de su Geografía Tropical; escrita por Ernesto
+              Guhl es el relato de como el geógrafo alemán viajo por todo el
+              país buscando enseñarnos como varios factores como el político o
+              el económico han afectado la geografía del país. En una sección
+              del libro titulada “Un colonizador colombiano” nos cuenta sobre
+              Tiberio, que tras varios años en la ciudad se decidió a mudarse
+              junto a su familia y empezar de cero en medio de la nada. Llegó a
+              colonizar varias hectáreas de campo y a tener un montón de
+              animales como vacas y gallinas. La violencia entre partidos lo
+              obligo a vender y dejarlo todo. Unos años después pudo volver a
+              trabajar en el campo, aunque ya sin ser el dueño. El objetivo de
+              eta historia es mostrar como un hombre que no tiene nada puede
+              llegar a un lugar donde a simple vista no hay nada y base de arduo
+              trabajo pudo ganarse la vida y aprovechar la tierra al máximo.
             </p>
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009596331&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jose-miguel-alvear" title="Jose Miguel" target="_blank" style="color: #cccccc; text-decoration: none;">Jose Miguel</a> · <a href="https://soundcloud.com/jose-miguel-alvear/geografia-tropical" title="Geografía tropical" target="_blank" style="color: #cccccc; text-decoration: none;">Geografía tropical</a></div>
+            <iframe
+              width="100%"
+              height="300"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009596331&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+            ></iframe>
+            <div
+              style="
+                font-size: 10px;
+                color: #cccccc;
+                line-break: anywhere;
+                word-break: normal;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                  Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+                font-weight: 100;
+              "
+            >
+              <a
+                href="https://soundcloud.com/jose-miguel-alvear"
+                title="Jose Miguel"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >Jose Miguel</a
+              >
+              ·
+              <a
+                href="https://soundcloud.com/jose-miguel-alvear/geografia-tropical"
+                title="Geografía tropical"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >Geografía tropical</a
+              >
+            </div>
           </div>
           <div
             class="grid-column span-half pt3 pb3 mobile-m order-7 reveal-on-scroll is-revealing"
@@ -268,65 +353,67 @@
             <div class="relative">
               <img
                 class="info-image relative z2"
-                src="/chippewa/dist/img/canoeing.jpg"
+                src="/chippewa/dist/img/mapa_cobertura.png"
                 alt="Canoeing"
               />
               <div class="pattern pattern--left-middle absolute z1"></div>
             </div>
           </div>
           <div class="grid-column span-half pt3 pb3 mobile-m order-10">
-            <h3>Canoeing</h3>
-            <p>
-              Nam si propter voluptatem, quae est ista laus, quae possit e
-              macello peti? Sin te auctoritas commovebat, nobisne omnibus et
-              Platoni ipsi nescio quem illum&nbsp;anteponebas.
-            </p>
+            <h3>Conclusión</h3>
+            <p></p>
+            <iframe
+              width="100%"
+              height="300"
+              scrolling="no"
+              frameborder="no"
+              allow="autoplay"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1009605577&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+            ></iframe>
+            <div
+              style="
+                font-size: 10px;
+                color: #cccccc;
+                line-break: anywhere;
+                word-break: normal;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
+                  Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+                font-weight: 100;
+              "
+            >
+              <a
+                href="https://soundcloud.com/user-931940156"
+                title="lorax"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >lorax</a
+              >
+              ·
+              <a
+                href="https://soundcloud.com/user-931940156/conclusion"
+                title="Conclusión"
+                target="_blank"
+                style="color: #cccccc; text-decoration: none"
+                >Conclusión</a
+              >
+            </div>
           </div>
         </section>
       </div>
 
       <!-- Pricing -->
-      <section class="align--center pt2 pb3">
-        <p class="h2">Rent the whole place for $3,670/night.</p>
-        <p>Maximum of 40 people.</p>
-      </section>
     </main>
 
     <!-- Footer -->
     <footer class="pt2 pb2">
       <div class="container align--center">
-        <p>W5723 Lake View Chester, CA 96020</p>
-        <p>
-          Design by
-          <a href="https://www.papayatemplates.com" class="link">Papaya.</a>
-        </p>
-        <ul class="no-bullets list--inline mt1">
-          <li class="mr1">
-            <a href="https://www.facebook.com" class="link"
-              ><img
-                class="icon"
-                src="/chippewa/dist/img/facebook.svg"
-                alt="Facebook"
-            /></a>
-          </li>
-          <li class="mr1">
-            <a href="https://www.twitter.com" class="link"
-              ><img
-                class="icon"
-                src="/chippewa/dist/img/twitter.svg"
-                alt="Twitter"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com" class="link"
-              ><img
-                class="icon"
-                src="/chippewa/dist/img/instagram.svg"
-                alt="Instagram"
-            /></a>
-          </li>
-        </ul>
-        <p>&copy; Camp Chippewa</p>
+        <p>Tomás Langebaek</p>
+        <p>Laura Hernandez</p>
+        <p>Miguel Romero</p>
+        <p>Jose Miguel Alvear</p>
       </div>
     </footer>
 
