--- a/index.html
+++ b/index.html
@@ -63,22 +63,8 @@
           <div class="grid-column span-half pt3 pb3 mobile-m order-2">
             <h3>Peregrinación Alpha</h3>
             <p>
-              Peregrinación Alpha es un documento escrito por Manuel Ancizar
-              dentro del marco de la comisión corográfica, es decir, que fue
-              producida en 1853. En esta se hace una acotación muy interesante,
-              ya que se presenta el paisaje en un sentido amplio que incluye
-              tanto el paisaje natural como el cultural en una única categoría.
-              En este documento se demuestra que la relación de dominación que
-              se estableció en la colonia permitió cambios en ambas dimensiones.
-              En primera instancia, se despojó a los indígenas de sus
-              territorios, lo que llevó a que el paisaje cultural se viera
-              afectado de manera irreversible. Por otro lado, el paisaje natural
-              también se vio transformado, puesto que se inició con la siembra
-              de cultivos, lo cual estuvo determinado por la misma condición
-              fértil del terreno. Esto refleja que el paisaje cultural puede ser
-              intervenido por la actividad humana, pero el paisaje natural, en
-              cierto sentido, condiciona la actividad humana que se puede
-              realizar en él por sus mismas condiciones morfológicas.
+              Peregrinación Alpha es un documento escrito por Manuel Ancizar dentro del marco de la comisión corográfica, es decir, que fue producida en 1853. Las imágenes también pertenecen a la comisión corográfica y fueron extraídas del fondo documental de la Biblioteca Nacional de Colombia. 
+Ancizar hace una acotación muy interesante, ya que presenta el paisaje en un sentido amplio que incluye tanto el espectro natural como el cultural en una única categoría. Aquí se analiza cómo el paisaje cultural puede ser intervenido por la actividad humana, pero el paisaje natural, en cierto sentido, condiciona la actividad humana que se puede realizar en él por sus mismas condiciones morfológicas.
             </p>
             <iframe
               width="100%"
@@ -138,6 +124,16 @@
               este ha moldeado a las comunidades humanas desde su cultura, hasta
               volviéndolas víctimas de un proceso generado por el paisaje mismo.
             </p>
+            <p>
+              <ul style="font-size: medium">
+                <li>
+                  Fuente: Flickr (En línea) (Consultado en marzo de 2021) Disponible en: https://www.flickr.com/photos/cerisolafer/3847402536
+                </li>
+                <li>
+Fuente: Fueyoeditores (En línea) (Consultado en marzo de 2021) Disponible en: https://www.fueyoeditores.com/rocas-y-minerales/articulos-tecnicos-rocas-y-minerales/714-cerrejon-la-explotacion-de-carbon-mas-grande-de-todo-sudamerica
+                </li>
+              </ul>
+            </p>
             <iframe
               width="100%"
               height="300"
@@ -183,7 +179,7 @@
             <div class="relative">
               <img
                 class="info-image relative z2"
-                src="/chippewa/dist/img/guajira.jpg"
+                src="/chippewa/dist/img/desierto.jpg"
                 alt="Teepee"
               />
               <div class="pattern pattern--right-middle absolute z1"></div>
@@ -234,6 +230,16 @@
               medio de tan grata algarabía, oíase a las veces el grito agudo del
               pajarero, que desde su barbacoa y armado de honda, espantaba las
               guacamayas hambrientas que revoloteaban sobre el maizal.”
+
+
+            <ul style="font-size: medium">
+              <li>
+                Fuente: Fondo Archivo del Patrimonio Fotográfico y Fílmico del Valle del Cauca. (En línea) (Consultado en marzo de 2021) Disponible en: http://hdl.handle.net/123456789/25046
+
+
+              </li>
+              <li>Fuente: Calibacana (En línea) (Consultado en marzo de 2021) Disponible en: https://www.calibacana.com/conectate/notibacanas/el-valle-del-cauca-fue-elegido-destino-tendencia-para-turismo-2020/</li>
+            </ul>
 
               <iframe
                 width="100%"
@@ -295,6 +301,21 @@
               llegar a un lugar donde a simple vista no hay nada y base de arduo
               trabajo pudo ganarse la vida y aprovechar la tierra al máximo.
             </p>
+            <p>
+              <ul style="font-size: medium">
+                <li>
+ Fuente: Freepic. (En línea) (Consultado en marzo de 2021)
+              Disponible en:
+              https://www.freepik.es/fotos-vectores-gratis/colombia-colonial
+                </li>
+                <li>
+Fuente: Walhere. (En línea) (Consultado en marzo de 2021)
+              Disponible en: https://wallhere.com/es/wallpaper/29943
+                </li>
+              </ul>
+             
+              
+            </p>
             <iframe
               width="100%"
               height="300"
@@ -353,7 +374,7 @@
             <div class="relative">
               <img
                 class="info-image relative z2"
-                src="/chippewa/dist/img/mapa_cobertura.png"
+                src="/chippewa/dist/img/conclusion.jpeg"
                 alt="Canoeing"
               />
               <div class="pattern pattern--left-middle absolute z1"></div>
