--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <h1 title="Camp Chippewa">
           <img
             class="logo"
-            src="/chippewa/dist/img/colombia.jpg"
+            src="/chippewa/dist/img/colombia2.png"
             alt="Camp Chippewa"
+            height="420"
+            width="2400"
           />
         </h1>
         <h2>
@@ -66,6 +68,12 @@
               Peregrinación Alpha es un documento escrito por Manuel Ancizar dentro del marco de la comisión corográfica, es decir, que fue producida en 1853. Las imágenes también pertenecen a la comisión corográfica y fueron extraídas del fondo documental de la Biblioteca Nacional de Colombia. 
 Ancizar hace una acotación muy interesante, ya que presenta el paisaje en un sentido amplio que incluye tanto el espectro natural como el cultural en una única categoría. Aquí se analiza cómo el paisaje cultural puede ser intervenido por la actividad humana, pero el paisaje natural, en cierto sentido, condiciona la actividad humana que se puede realizar en él por sus mismas condiciones morfológicas.
             </p>
+                        <ul style="font-size: medium">
+              <li>
+               Fuente: Biblioteca Nacional (En línea) (Consultado en marzo de 2021) Disponible en: https://catalogoenlinea.bibliotecanacional.gov.co/client/es_ES/search/asset/3050/0
+              </li>
+          
+            </ul>
             <iframe
               width="100%"
               height="300"
@@ -201,35 +209,7 @@ Fuente: Fueyoeditores (En línea) (Consultado en marzo de 2021) Disponible en: h
           <div class="grid-column span-half pt3 pb3 mobile-m order-6">
             <h3>El paisaje del valle del cauca</h3>
             <p>
-              Es de vital importancia dar una mirada al paisaje vallecaucano. El
-              estudio de esta zona geográfica nos permite entender la naturaleza
-              de la relación entre el hombre y un medio natural caracterizado
-              por la diversidad en su flora, fauna, recursos hídricos, variedad
-              de climas, suelos y relieve. Estas características le han
-              permitido a este territorio ofrecer unas condiciones que favorecen
-              el diario vivir de las comunidades vallecaucanas. Además, esto ha
-              permitido el desarrollo la agricultura tecnificada e industrias
-              asociadas a cadenas productivas nacionales y globales. Uno de los
-              factores que ha hecho que esto sea posible es el acceso abundante
-              al recurso hídrico. El Valle del Cauca tiene como principal
-              arteria fluvial al río Cauca, este río ha generado ventajas únicas
-              a sus habitantes que les ha permitido avanzar en su desarrollo
-              social, económico y cultural. Para ilustrar este argumento,
-              revisemos la obra literaria María de Jorge Isaacs, en donde el
-              autor describe el entorno natural de la casa de uno de sus amigos
-              de la siguiente forma: “Después de una pequeña cuesta pendiente y
-              oscura, y de atravesar a saltos por sobre el arbolado seco de los
-              últimos derribos del montañés, me hallé en la placeta sembrada de
-              legumbres, desde donde divisé humeando la casita situada en medio
-              de las colinas verdes, que yo había dejado entre bosques alparecer
-              indestructibles. Las vacas, hermosas por su tamaño y color,
-              bramaban a la puerta del corral buscando sus becerros. Las aves
-              domésticas alborotaban recibiendo la ración matutina; en las
-              palmeras cercanas, que había respetado el hacha de los labradores,
-              se mecían las oropéndolas bulliciosas en sus nidos colgantes, y en
-              medio de tan grata algarabía, oíase a las veces el grito agudo del
-              pajarero, que desde su barbacoa y armado de honda, espantaba las
-              guacamayas hambrientas que revoloteaban sobre el maizal.”
+              Es de vital importancia dar una mirada al paisaje vallecaucano. El estudio de esta zona geográfica nos permite entender la naturaleza de la relación entre el hombre y un medio natural caracterizado por la diversidad en su flora, fauna, recursos hídricos, variedad de climas, suelos y relieve. Estas características le han permitido a este territorio ofrecer unas condiciones que favorecen el diario vivir de las comunidades vallecaucanas. Además, esto ha permitido el desarrollo la agricultura tecnificada e industrias asociadas a cadenas productivas nacionales y globales. Uno de los factores que ha hecho que esto sea posible es el acceso abundante al recurso hídrico. El Valle del Cauca tiene como principal arteria fluvial al río Cauca, este río ha generado ventajas únicas a sus habitantes que les ha permitido avanzar en su desarrollo social, económico y cultural.
 
 
             <ul style="font-size: medium">
